revert model changes

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import joblib\n",
     "import numpy as np\n",
     "import nfl_data_py as nfl\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +70,7 @@
     "            'play_type']]\n",
     "    \n",
     "    #filters to play type run or pass\n",
-    "    criteria = (df['play_type'] == 'run') | (df['play_type']=='pass')\n",
+    "    criteria = (df['play_type'] == 'run') | (df['play_type']=='pass') | (df['play_type']=='punt') | (df['play_type']=='field_goal')\n",
     "    df = df.loc[criteria].copy()\n",
     "\n",
     "    # fill whether the posessing team is home or away\n",
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,21 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Model - Score: 0.6939199395770392\n",
-      "Best Hyperparameters: {'n_estimators': 700, 'min_samples_split': 16, 'min_samples_leaf': 3, 'max_features': None, 'max_depth': 16}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_dist = {\n",
-    "    'n_estimators': np.arange(100, 2000, 100),  # Number of trees in the forest\n",
+    "    'n_estimators': np.arange(100, 1500, 100),  # Number of trees in the forest\n",
     "    'max_depth': [None] + list(np.arange(2, 20, 2)),  # Maximum depth of the trees\n",
     "    'min_samples_split': np.arange(2, 18, 2),  # Minimum samples required to split an internal node\n",
     "    'min_samples_leaf': np.arange(1, 12, 2),  # Minimum samples required to be at a leaf node\n",
@@ -125,7 +126,7 @@
     "random_search = RandomizedSearchCV(\n",
     "    rf,\n",
     "    param_distributions=param_dist,\n",
-    "    n_iter=1,  # Number of random parameter combinations to try\n",
+    "    n_iter=200,  # Number of random parameter combinations to try\n",
     "    cv=3,  # Number of cross-validation folds\n",
     "    #scoring='neg_mean_absolute_error',  # Use negative MSE as the evaluation metric\n",
     "    random_state=42\n",
@@ -349,17 +350,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save model\n",
-    "with open('model/rf_v1.pkl', 'wb') as f:\n",
-    "    pickle.dump(best_rf, f)\n",
+    "joblib.dump(best_rf, 'model/rf_v1.joblib')\n",
     "\n",
     "# save columns\n",
     "with open('data/feature_cols.pkl', 'wb') as f:\n",
     "    pickle.dump(list(X_train.columns), f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022 done.\n",
+      "Downcasting floats.\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = nfl.import_pbp_data([2022], downcast=True, cache=False, alt_path=None)\n",
+    "data.head()\n",
+    "\n",
+    "df = data[['home_team', \n",
+    "        'away_team', \n",
+    "        'week', \n",
+    "        'posteam', \n",
+    "        'defteam', \n",
+    "        'yardline_100', \n",
+    "        'half_seconds_remaining',\n",
+    "        'game_seconds_remaining', \n",
+    "        'down',\n",
+    "        'goal_to_go',\n",
+    "        'ydstogo',\n",
+    "        'posteam_score',\n",
+    "        'defteam_score',\n",
+    "        'play_type']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "play_type\n",
+       "pass           20393\n",
+       "run            15037\n",
+       "no_play         4563\n",
+       "kickoff         2835\n",
+       "punt            2294\n",
+       "extra_point     1253\n",
+       "field_goal      1105\n",
+       "qb_kneel         442\n",
+       "qb_spike          63\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['play_type'].value_counts()"
    ]
   },
   {
