--- a/train.ipynb
+++ b/train.ipynb
@@ -68,7 +68,7 @@
     "            'defteam_score',\n",
     "            'play_type']]\n",
     "    \n",
-    "    #filters to play type run or pass\n",
+    "    #filters to play type run, pass, punt, FG\n",
     "    criteria = (df['play_type'] == 'run') | (df['play_type']=='pass') | (df['play_type']=='punt') | (df['play_type']=='field_goal')\n",
     "    df = df.loc[criteria].copy()\n",
     "\n",
@@ -81,6 +81,7 @@
     "    # get dummies\n",
     "    encoded_df = pd.get_dummies(df, columns=['posteam', 'defteam'])\n",
     "\n",
+    "    # save\n",
     "    encoded_df.to_pickle('data/encoded_df.pkl')\n"
    ]
   },
@@ -90,6 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load data\n",
     "encoded_df = pd.read_pickle('data/encoded_df.pkl')"
    ]
   },
@@ -99,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# split to X and y and train/test\n",
     "X = encoded_df.drop(columns=['play_type'])\n",
-    "\n",
     "y = encoded_df['play_type']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
@@ -121,35 +123,37 @@
     }
    ],
    "source": [
+    "# establish randomsearch field\n",
     "param_dist = {\n",
-    "    'n_estimators': np.arange(100, 1500, 100),  # Number of trees in the forest\n",
-    "    'max_depth': [None] + list(np.arange(2, 20, 2)),  # Maximum depth of the trees\n",
-    "    'min_samples_split': np.arange(2, 18, 2),  # Minimum samples required to split an internal node\n",
-    "    'min_samples_leaf': np.arange(1, 12, 2),  # Minimum samples required to be at a leaf node\n",
-    "    'max_features': ['sqrt', None]  # Number of features to consider for the best split\n",
+    "    'n_estimators': np.arange(100, 1500, 100),\n",
+    "    'max_depth': [None] + list(np.arange(2, 20, 2)),\n",
+    "    'min_samples_split': np.arange(2, 18, 2),\n",
+    "    'min_samples_leaf': np.arange(1, 12, 2),\n",
+    "    'max_features': ['sqrt', None]\n",
     "}\n",
     "\n",
+    "# instantiate model\n",
     "rf = RandomForestClassifier()\n",
     "\n",
+    "# perform grid search\n",
     "random_search = RandomizedSearchCV(\n",
     "    rf,\n",
     "    param_distributions=param_dist,\n",
-    "    n_iter=25,  # Number of random parameter combinations to try\n",
+    "    n_iter=50,  # Number of random parameter combinations to try\n",
     "    cv=3,  # Number of cross-validation folds\n",
     "    #scoring='neg_mean_absolute_error',  # Use negative MSE as the evaluation metric\n",
     "    random_state=42\n",
     ")\n",
-    "\n",
     "random_search.fit(X_train, y_train)\n",
     "\n",
-    "# Get the best estimator and its hyperparameters\n",
+    "# het the best estimator and its hyperparameters\n",
     "best_rf = random_search.best_estimator_\n",
     "best_params = random_search.best_params_\n",
     "\n",
-    "# Make predictions on the test data using the best model\n",
+    "# make predictions on the test data using the best model\n",
     "y_pred = best_rf.predict(X_test)\n",
     "\n",
-    "# Calculate Mean Squared Error to evaluate the best model\n",
+    "# calculate accuracy_score to evaluate the best model\n",
     "acc = accuracy_score(y_test, y_pred)\n",
     "print(f\"Best Model - Score: {acc}\")\n",
     "print(\"Best Hyperparameters:\", best_params)"
@@ -410,42 +414,11 @@
     }
    ],
    "source": [
+    "# review feature importances\n",
     "importance = best_rf.feature_importances_\n",
     "features = X.columns\n",
     "imp_df = pd.DataFrame({'feature':features, 'imp':importance}).sort_values(by='imp', ascending=False)\n",
     "imp_df.head(35)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols_to_remove = imp_df['feature'][-35:].to_list()\n",
-    "encoded_df = encoded_df.loc[:, ~encoded_df.columns.isin(cols_to_remove)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" all features\\nBest Model - Score: 0.7085522349496167\\nBest Hyperparameters: {'n_estimators': 1200, 'min_samples_split': 8, 'min_samples_leaf': 3, 'max_features': None, 'max_depth': 18}\""
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "''' all features\n",
-    "Best Model - Score: 0.7085522349496167\n",
-    "Best Hyperparameters: {'n_estimators': 1200, 'min_samples_split': 8, 'min_samples_leaf': 3, 'max_features': None, 'max_depth': 18}'''"
    ]
   },
   {
@@ -462,66 +435,6 @@
     "with open('data/feature_cols.pkl', 'wb') as f:\n",
     "    pickle.dump(list(X_train.columns), f)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022 done.\n",
-      "Downcasting floats.\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = nfl.import_pbp_data([2022], downcast=True, cache=False, alt_path=None)\n",
-    "data.head()\n",
-    "\n",
-    "df = data[['home_team', \n",
-    "        'away_team', \n",
-    "        'week', \n",
-    "        'posteam', \n",
-    "        'defteam', \n",
-    "        'yardline_100', \n",
-    "        'half_seconds_remaining',\n",
-    "        'game_seconds_remaining', \n",
-    "        'down',\n",
-    "        'goal_to_go',\n",
-    "        'ydstogo',\n",
-    "        'posteam_score',\n",
-    "        'defteam_score',\n",
-    "        'play_type']]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['feature', 'imp'], dtype='object')"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
